[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "maths_utility"
version = "0.1.0"
description = "A Python mathematics utility package"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  {name = "Harshit Soni"}
]
license = {text = "MIT"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent"
]
